--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,4 @@
-import groovy.json.JsonSlurperClassic
+import groovy.json.JsonSlurper
 
 
 
@@ -84,7 +84,7 @@ pipeline {
                         script: "aws cloudformation list-stacks --stack-status-filter ${cfStackStatusFilters.join(' ')} | jq -r '.StackSummaries | map(select(.StackName == \"$CFStackName\"))'",
                         returnStdout: true
                     ).trim()
-                    def jsonSlurper = new JsonSlurperClassic()
+                    def jsonSlurper = new JsonSlurper()
                     def stacksResultParsed = jsonSlurper.parseText(stacksResult)
                     println "Parsed result of stacks: ${stacksResultParsed}"
 
@@ -126,13 +126,13 @@ pipeline {
                     // println "uploadResult = ${uploadResult}"
 
                     echo "Create CloudFormation stack"
-                    def creationResult = sh(
-                        script: "aws cloudformation create-stack --stack-name $CFStackName --template-url https://morova-bucket.s3.us-east-2.amazonaws.com/eks/infrastructure.yaml --parameters ParameterKey=ClusterName,ParameterValue=$EKSClusterName --capabilities CAPABILITY_NAMED_IAM",
+                    def stackId = sh(
+                        script: "aws cloudformation create-stack --stack-name $CFStackName --template-url https://morova-bucket.s3.us-east-2.amazonaws.com/eks/infrastructure.yaml --parameters ParameterKey=ClusterName,ParameterValue=$EKSClusterName --capabilities CAPABILITY_NAMED_IAM | jq -r '.StackId'",
                         returnStdout: true
                     ).trim()
-                    println "creationResult = ${creationResult}"
-                    def jsonSlurper = new JsonSlurperClassic()
-                    def stackId = jsonSlurper.parseText(creationResult).StackId
+                    // println "creationResult = ${creationResult}"
+                    // def jsonSlurper = new JsonSlurper()
+                    // def stackId = jsonSlurper.parseText(creationResult).StackId
 
                     println "stackId = ${stackId}"
 
