--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -4,7 +4,7 @@ USER root
 
 # Install jq
 RUN apt-get update && \
-    apt-get install -y jq
+    apt-get install -y jq wget
 
 # Install awscli
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && \
