--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -193,9 +193,10 @@ pipeline {
 
         stage ('INFR - deploy tools') {
             steps {
-                echo "Add helm repos"
+                echo "Deploy Prometheus, Prometheus Blackbox Exporter, Prometheus Adapter, Grafana, Chaos Mesh"
                 script {
                     sh """
+                    |kubectl apply -f k8s-deployment/000-namespaces.yaml
                     |helm upgrade --install prometheus prometheus-community/prometheus -n monitoring -f helm/prometheus/values.yaml
                     |helm upgrade --install prometheus-blackbox-exporter prometheus-community/prometheus-blackbox-exporter -n monitoring -f helm/blackbox-exporter/values.yaml
                     |helm upgrade --install prometheus-adapter prometheus-community/prometheus-adapter -n monitoring -f helm/prometheus-adapter/values.yaml
