--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -25,7 +25,8 @@ pipeline {
         booleanParam(name: 'DeployTools', defaultValue: true, description: 'Set to TRUE to deploy Grafana, Chaos Mesh, Prometheus, etc.')
         booleanParam(name: 'DeploySUT', defaultValue: true, description: 'Set to TRUE to deploy the SUT')
         booleanParam(name: 'RunMeasurement', defaultValue: true, description: 'Set to TRUE to run the measurements against the SUT')
-        booleanParam(name: 'CleanUpCFStack', defaultValue: true, description: 'Set to TRUE to delete the CloudFormation stack at the end of the pipeline')
+        booelenaParam(name: 'DeleteNamespaces', defaultValue: true, description: 'Set to TRUE to delete namespaces')
+        booleanParam(name: 'DeleteCFStack', defaultValue: true, description: 'Set to TRUE to delete the CloudFormation stack at the end of the pipeline')
         string(name: 'S3Bucket', defaultValue: 'morova-bucket', description: 'The name of the S3 bucket to store the CF template')
     }
 
@@ -231,24 +232,26 @@ pipeline {
             }
         }
 
+        stage('CLEAN - namespaces') {
+            when { expression { DeleteNamespaces } }
+
+            steps {
+                echo "Delete namespaces"
+                sh """
+                |kubectl delete -f k8s-deployment/000-namespaces.yaml
+                """.stripMargin('|')
+            }
+        }
+
         stage('CLEAN - infrastructure') {
-            when { expression { CleanUpCFStack } }
+            when { expression { DeleteCFStack } }
             
             steps {
                 echo "Clean up CloudFormation stack"
                 sh """
                 |aws cloudformation delete-stack --stack-name $CFStackName
                 """.stripMargin('|')
-
             }
-        }
-    }
-
-    post {
-        failure {
-            sh """
-            |kubectl delete -f k8s-deployment/000-namespaces.yaml
-            """.stripMargin('|')
         }
     }
 }
