--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -239,9 +239,6 @@ pipeline {
                 echo "Install dependencies for kubedepend"
                 dir('kubedepend') {
                     sh """
-                    |echo "TODO: Configuring"
-                    |pwd
-                    |ls -la
                     |pipenv install
                     """.stripMargin('|')
                 }
@@ -251,9 +248,14 @@ pipeline {
         stage('MEAS - Running tests') {
             when { expression { RunMeasurement == 'true' } }
             steps {
-                echo "Running tests"
                 dir('kubedepend/kubedepend') {
                     sh """
+                    |echo "Opening ports..."
+                    |k -n monitoring port-forward service/prometheus-server 9090:80 &
+                    |PROM_PORT_FW_PID=$!
+                    |k -n measurement-proxy port-forward service/measurement-proxy 8000:80 &
+                    |MEAS_PROXY_PORT_FW_PID=$!
+                    |echo "Running tests"
                     |pipenv run python kubedepend.py
                     """.stripMargin('|')
                 }
