--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -255,6 +255,8 @@ pipeline {
                     |PROM_PORT_FW_PID=\$!
                     |k -n measurement-proxy port-forward service/measurement-proxy 8000:80 &
                     |MEAS_PROXY_PORT_FW_PID=\$!
+                    |sleep 5
+                    |curl -IL http://localhost:9090
                     |echo "Running tests"
                     |pipenv run python kubedepend.py
                     """.stripMargin('|')
