--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -253,7 +253,7 @@ pipeline {
                     |echo "Opening ports..."
                     |k -n monitoring port-forward service/prometheus-server 9090:80 &
                     |PROM_PORT_FW_PID=\$!
-                    |k -n measurement-proxy port-forward service/measurement-proxy 8000:80 &
+                    |kubectl -n measurement-proxy port-forward service/measurement-proxy 8000:80 &
                     |MEAS_PROXY_PORT_FW_PID=\$!
                     |sleep 5
                     |curl -IL http://localhost:9090
