--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -251,7 +251,7 @@ pipeline {
                 dir('kubedepend/kubedepend') {
                     sh """
                     |echo "Opening ports..."
-                    |k -n monitoring port-forward service/prometheus-server 9090:80 &
+                    |kubectl -n monitoring port-forward service/prometheus-server 9090:80 &
                     |PROM_PORT_FW_PID=\$!
                     |kubectl -n measurement-proxy port-forward service/measurement-proxy 8000:80 &
                     |MEAS_PROXY_PORT_FW_PID=\$!
