--- a/helm/blackbox-exporter/values.yaml
+++ b/helm/blackbox-exporter/values.yaml
@@ -97,7 +97,7 @@ config:
       timeout: 5s
       http:
         valid_http_versions: ["HTTP/1.1", "HTTP/2.0"]
-        no_follow_redirects: false
+        follow_redirects: true
         preferred_ip_protocol: "ip4"
 
 extraConfigmapMounts: []
