--- a/helm/chaos-mesh/values.yaml
+++ b/helm/chaos-mesh/values.yaml
@@ -4,6 +4,9 @@
 nameOverride: ""
 fullnameOverride: ""
 
+# Custom labels to add
+customLabels: {}
+
 # clusterScoped is whether chaos-mesh should manage kubernetes cluster wide chaos
 # Also see rbac.create and controllerManager.serviceAccount
 clusterScoped: true
@@ -23,16 +26,23 @@ timezone: "UTC"
 # enableProfiling is a flag to enable pprof in controller-manager and chaos-daemon.
 enableProfiling: true
 
+# enableCtrlServer is a flag to enable ctrlserver in controller-manager and chaos-daemon.
+enableCtrlServer: true
+
 registry: ""
+
+## Optional array of imagePullSecrets containing private registry credentials
+## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
+imagePullSecrets: []
+# - name: secretName
 
 controllerManager:
   hostNetwork: false
   serviceAccount: chaos-controller-manager
 
-  replicaCount: 1
+  replicaCount: 3
 
   priorityClassName: ""
-
   image: pingcap/chaos-mesh:latest
   imagePullPolicy: IfNotPresent
 
@@ -65,8 +75,26 @@ controllerManager:
 
   podAnnotations: {}
 
+  # A list of controllers to enable. "*" enables all controllers by default.
+  enabledControllers:
+  - "*" 
+
+  # A list of webhooks to enable. "*" enables all webhooks by default.
+  enabledWebhooks:
+  - "*"
+
   # This is Dangerous. Run only on temporary clusters.
   allowHostNetworkTesting: false
+
+  podChaos:
+    podFailure:
+      pauseImage: gcr.io/google-containers/pause:latest
+
+  leaderElection:
+    enabled: true
+    leaseDuration: 15s
+    renewDeadline: 10s
+    retryPeriod: 2s
 
 chaosDaemon:
   image: pingcap/chaos-daemon:latest
@@ -102,7 +130,7 @@ chaosDaemon:
   podSecurityPolicy: false
 
   # runtime specifies which container runtime to use. Currently
-  # we only supports docker and containerd.
+  # we only supports docker, containerd and CRI-O.
   runtime: docker
 
   # socketPath specifies the container runtime socket.
@@ -112,6 +140,11 @@ chaosDaemon:
   # config below to use containerd as the runtime in chaos-daemon.
   # runtime: containerd
   # socketPath: /run/containerd/containerd.sock
+
+  # If you are using CRI-O as CRI, you can use the
+  # config below to use CRI-O as the runtime in chaos-daemon.
+  # runtime: crio
+  # socketPath: /var/run/crio/crio.sock
 
   resources: {}
     # We usually recommend not to specify default resources and to leave this as a conscious
@@ -133,6 +166,7 @@ chaosDaemon:
 
 dashboard:
   create: true
+  hostNetwork: false
 
   replicaCount: 1
 
@@ -143,7 +177,7 @@ dashboard:
   image: pingcap/chaos-dashboard:latest
   imagePullPolicy: IfNotPresent
 
-  securityMode: false
+  securityMode: true
 
   nodeSelector: {}
 
@@ -253,13 +287,15 @@ dnsServer:
 
   serviceAccount: chaos-dns-server
 
-  image: pingcap/coredns:v0.2.0
+  image: pingcap/coredns:v0.2.1
 
   imagePullPolicy: IfNotPresent
 
   priorityClassName: ""
 
   nodeSelector: {}
+
+  podAnnotations: {}
 
   runtime: docker
 
@@ -349,10 +385,12 @@ webhook:
     - stresschaos
     - awschaos
     - gcpchaos
-    - podiochaos
-    - podnetworkchaos
     - dnschaos
     - jvmchaos
+    - schedule
+    - workflow
+    - httpchaos
+    - physicalmachinechaos
 
 bpfki:
   create: false
@@ -370,3 +408,8 @@ bpfki:
     # requests:
     #  cpu: 250m
     #  memory: 512Mi
+
+chaosDlv:
+  enable: false
+  image: pingcap/chaos-dlv:latest
+  imagePullPolicy: IfNotPresent
